# Polymarket-MM-Bot

./: .gitignore  README.md  env.example  pyproject.toml
docs/: architecture.md  operations.md  risk.md
scripts/: run_live.sh  run_paper.sh
src/pmm/: cli.py  config.py  console.py  logging.py
src/pmm/analytics/: inventory.py  pnl.py  reports.py
src/pmm/db/: __init__.py  repo.py  schema.py
src/pmm/execution/: __init__.py  exchange_base.py  live_exchange.py  live_user_stream.py  order_manager.py  paper_exchange.py
src/pmm/market/: __init__.py  clob_public.py  gamma.py  universe.py
src/pmm/strategy/: __init__.py  allocator.py  base.py  calibrator.py  circuit_breaker.py  exposure_manager.py  mm_spread.py  risk.py
src/pmm/utils/: __init__.py  math.py  time.py
